# azure-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  main_pretty.py  requirements.txt
agent/: bankingservices_agent.py
config/: agent_config.yaml  kernel_config.yaml
database/: db_messages.db
kernel/: kernel.py
mcp_server/: README.md  demo.py  pyproject.toml  server.py
plugins/: azure_blob_plugin.py  emoji_enhancer_plugin.py  sql_plugin.py
prompts/: bankingservices_prompt.yaml  northwind_prompt.yaml
scripts/: build_docker_image.ps1  run_docker_container.ps1
src/: agent.py  database_manager.py  history_manager.py  manage_conversations.py
